index: Fix hero padding on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -31,4 +31,5 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 2rem;
 }
